--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "realm": "^10.17.0",
+    "realm-web": "^1.7.0"
   }
 }
