added add teacher and send mail. should do respone part and delete if mail not send

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.4",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "realm": "^10.17.0",
     "realm-web": "^1.7.0"
