--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
+    "moment": "^2.29.3",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.4",
     "nodemailer": "^6.7.5",
